--- a/MyApp/Views/Home/Components.cshtml
+++ b/MyApp/Views/Home/Components.cshtml
@@ -4,7 +4,11 @@ ViewData["Title"] = "Counter";
 
 <div class="text-center">
     <h1>Components</h1>
-    <count-component></count-component>
+    <div class="d-flex justify-content-center gap-2">
+        <count-component></count-component>
+        <count-component></count-component>
+        <count-component></count-component>
+    </div>
 </div>
 
 @* Create mixin *@
