--- a/MyApp/Views/Home/Components.cshtml
+++ b/MyApp/Views/Home/Components.cshtml
@@ -15,21 +15,7 @@ ViewData["Title"] = "Counter";
 @section Scripts {
     <script>
         
-        const pageMixin = {
-            data() {
-                return {
-                    count: 0
-                };
-            },
-            methods: {
-                increment() {
-                    this.count++;
-                },
-                decrement() {
-                    this.count--;
-                }
-            }
-        };
+        const pageMixin = {};
     
     </script>
 }
